// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.marketplaces getMarketplaces should filter out unknown marketplaces 1`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "fr",
    "currencyCode": "EUR",
    "domain": "amazon.fr",
    "id": "A13V1IB3VIYZZH",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "France",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.fr",
    "vendorId": "A1X6FK5RDHNB96",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "de",
    "currencyCode": "EUR",
    "domain": "amazon.de",
    "id": "A1PA6795UKMFR9",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Germany",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.de",
    "vendorId": "A3JWKAKR8XB7XF",
  },
]
`;

exports[`lib.client.marketplaces getMarketplaces should ignore marketplaces without an API endpoint 1`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "fr",
    "currencyCode": "EUR",
    "domain": "amazon.fr",
    "id": "A13V1IB3VIYZZH",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "France",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.fr",
    "vendorId": "A1X6FK5RDHNB96",
  },
  Object {
    "code": "nl",
    "currencyCode": "EUR",
    "domain": "amazon.nl",
    "id": "A1805IZSGTT6HS",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Netherlands",
    "region": "eu",
    "sellerCentralDomain": "sellercentral.amazon.nl",
    "vendorCentralDomain": "vendorcentral.amazon.nl",
    "vendorId": "A17D2BRD4YMT0X",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "uk",
    "currencyCode": "GBP",
    "domain": "amazon.co.uk",
    "id": "A1F83G8C2ARO7P",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "United Kingdom",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.co.uk",
    "vendorId": "A3P5ROKL5A1OLE",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "de",
    "currencyCode": "EUR",
    "domain": "amazon.de",
    "id": "A1PA6795UKMFR9",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Germany",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.de",
    "vendorId": "A3JWKAKR8XB7XF",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "es",
    "currencyCode": "EUR",
    "domain": "amazon.es",
    "id": "A1RKKUPIHCS9HS",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Spain",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.es",
    "vendorId": "A1AT7YVPFBWXBL",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "it",
    "currencyCode": "EUR",
    "domain": "amazon.it",
    "id": "APJ6JRA9NG5V4",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Italy",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.it",
    "vendorId": "A11IL2PNWYJU7H",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 1`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "de",
    "currencyCode": "EUR",
    "domain": "amazon.de",
    "id": "A1PA6795UKMFR9",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Germany",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.de",
    "vendorId": "A3JWKAKR8XB7XF",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "es",
    "currencyCode": "EUR",
    "domain": "amazon.es",
    "id": "A1RKKUPIHCS9HS",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Spain",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.es",
    "vendorId": "A1AT7YVPFBWXBL",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "fr",
    "currencyCode": "EUR",
    "domain": "amazon.fr",
    "id": "A13V1IB3VIYZZH",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "France",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.fr",
    "vendorId": "A1X6FK5RDHNB96",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "it",
    "currencyCode": "EUR",
    "domain": "amazon.it",
    "id": "APJ6JRA9NG5V4",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Italy",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.it",
    "vendorId": "A11IL2PNWYJU7H",
  },
  Object {
    "advertisingApiDomain": "advertising-api-eu.amazon.com",
    "code": "uk",
    "currencyCode": "GBP",
    "domain": "amazon.co.uk",
    "id": "A1F83G8C2ARO7P",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "United Kingdom",
    "region": "eu",
    "sellerCentralDomain": "sellercentral-europe.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.co.uk",
    "vendorId": "A3P5ROKL5A1OLE",
  },
  Object {
    "code": "tr",
    "currencyCode": "TRY",
    "domain": "amazon.com.tr",
    "id": "A33AVAJ2PDY3EV",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Turkey",
    "region": "eu",
    "sellerCentralDomain": "sellercentral.amazon.com.tr",
    "vendorCentralDomain": "vendorcentral.amazon.com.tr",
    "vendorId": "A1UNQM1SR2CHM",
  },
  Object {
    "code": "eg",
    "currencyCode": "EGP",
    "domain": "amazon.eg",
    "id": "ARBP9OOSHTCHU",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Egypt",
    "region": "eu",
    "sellerCentralDomain": "sellercentral.amazon.eg",
    "vendorCentralDomain": "vendorcentral.amazon.me",
    "vendorId": "A1ZVRGNO5AYLOV",
  },
  Object {
    "code": "sa",
    "currencyCode": "SAR",
    "domain": "amazon.sa",
    "id": "A17E79C6D8DWNP",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Saudi Arabia",
    "region": "eu",
    "sellerCentralDomain": "sellercentral.amazon.com.sa",
    "vendorId": "A2XPWB6MYN7ZDK",
  },
  Object {
    "code": "nl",
    "currencyCode": "EUR",
    "domain": "amazon.nl",
    "id": "A1805IZSGTT6HS",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Netherlands",
    "region": "eu",
    "sellerCentralDomain": "sellercentral.amazon.nl",
    "vendorCentralDomain": "vendorcentral.amazon.nl",
    "vendorId": "A17D2BRD4YMT0X",
  },
  Object {
    "code": "se",
    "currencyCode": "SEK",
    "domain": "amazon.se",
    "id": "A2NODRKZP88ZB9",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Sweden",
    "region": "eu",
    "sellerCentralDomain": "sellercentral.amazon.se",
    "vendorCentralDomain": "vendorcentral.amazon.se",
    "vendorId": "ANU9KP01APNAG",
  },
  Object {
    "code": "pl",
    "currencyCode": "PLN",
    "domain": "amazon.pl",
    "id": "A1C3SOZRARQ6R3",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws-eu.amazonservices.com",
    "name": "Poland",
    "region": "eu",
    "sellerCentralDomain": "sellercentral.amazon.pl",
    "vendorCentralDomain": "vendorcentral.amazon.pl",
    "vendorId": "A2R2221NX79QZP",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 2`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api.amazon.com",
    "code": "us",
    "currencyCode": "USD",
    "domain": "amazon.com",
    "id": "ATVPDKIKX0DER",
    "imagesDomain": "images-na.ssl-images-amazon.com",
    "mwsDomain": "mws.amazonservices.com",
    "name": "United States",
    "region": "na",
    "sellerCentralDomain": "sellercentral.amazon.com",
    "vendorCentralDomain": "vendorcentral.amazon.com",
    "vendorId": "ATVPDKIKX0DER",
  },
  Object {
    "code": "br",
    "currencyCode": "BRL",
    "domain": "amazon.com.br",
    "id": "A2Q3Y263D00KWC",
    "imagesDomain": "images-na.ssl-images-amazon.com",
    "mwsDomain": "mws.amazonservices.com",
    "name": "Brazil",
    "region": "na",
    "sellerCentralDomain": "sellercentral.amazon.com.br",
    "vendorCentralDomain": "vendorcentral.amazon.com.br",
    "vendorId": "A1ZZFT5FULY4LN",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 3`] = `
Array [
  Object {
    "code": "sg",
    "currencyCode": "SGD",
    "domain": "amazon.sg",
    "id": "A19VAU5U5O7RUS",
    "imagesDomain": "images-fe.ssl-images-amazon.com",
    "mwsDomain": "mws-fe.amazonservices.com",
    "name": "Singapore",
    "region": "fe",
    "sellerCentralDomain": "sellercentral.amazon.sg",
    "vendorCentralDomain": "vendorcentral.amazon.com.sg",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 4`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api.amazon.com",
    "code": "ca",
    "currencyCode": "CAD",
    "domain": "amazon.ca",
    "id": "A2EUQ1WTGCTBG2",
    "imagesDomain": "images-na.ssl-images-amazon.com",
    "mwsDomain": "mws.amazonservices.ca",
    "name": "Canada",
    "region": "na",
    "sellerCentralDomain": "sellercentral.amazon.ca",
    "vendorCentralDomain": "vendorcentral.amazon.ca",
    "vendorId": "A3DWYIK6Y9EEQB",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 5`] = `
Array [
  Object {
    "code": "in",
    "currencyCode": "INR",
    "domain": "amazon.in",
    "id": "A21TJRUUN4KGV",
    "imagesDomain": "images-eu.ssl-images-amazon.com",
    "mwsDomain": "mws.amazonservices.in",
    "name": "India",
    "region": "eu",
    "sellerCentralDomain": "sellercentral.amazon.in",
    "vendorCentralDomain": "vendorcentral.amazon.in",
  },
]
`;

exports[`lib.client.marketplaces getMarketplacesFromRegion should return a list of marketplaces for MWS regions 6`] = `
Array [
  Object {
    "advertisingApiDomain": "advertising-api-fe.amazon.com",
    "code": "jp",
    "currencyCode": "JPY",
    "domain": "amazon.co.jp",
    "id": "A1VC38T7YXB528",
    "imagesDomain": "images-fe.ssl-images-amazon.com",
    "mwsDomain": "mws.amazonservices.jp",
    "name": "Japan",
    "region": "fe",
    "sellerCentralDomain": "sellercentral.amazon.co.jp",
    "vendorCentralDomain": "vendorcentral.amazon.co.jp",
    "vendorId": "AN1VRQENFRJN5",
  },
]
`;
